Update Spring and Java versions in configuration
- Ensure the old version still works on modern JVMs
- Use release version of Spring Framework 4.1.0.RELEASE
- Update Maven compiler plugin to use Java 17
- Add necessary JVM options for reflective access in tests
- Update batch-context.xml to use the specific Spring Integration schema
- Enhance README with build and testing instructions for JDK 17